making changes to homepage

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h2 class="title">Frontend Developer | Cybersecurity Enthusiast</h2>
                 <p class="introduction">
                     Passionate about creating seamless digital experiences and ensuring robust security measures. 
-                    Specializing in modern web development with a keen focus on user-centric design and cybersecurity best practices.
+                    <!--Specializing in modern web development with a keen focus on user-centric design and cybersecurity best practices.-->
                 </p>
                 <div class="btn-con">
                     <a href="#" class="main-btn">
@@ -353,8 +353,31 @@
         </div>
     </div>
 
+    <div class="logo-background">
+        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="100" cy="100" r="90" fill="#2c3e50" />
+            <path d="M100 30 L160 60 L160 110 C160 150 100 170 100 170 C100 170 40 150 40 110 L40 60 Z" 
+                  fill="none" 
+                  stroke="#e74c3c" 
+                  stroke-width="4"/>
+            <path d="M70 60 L70 140 M70 100 L90 60 M70 100 L90 140" 
+                  stroke="#fff" 
+                  stroke-width="8" 
+                  stroke-linecap="round"
+                  fill="none"/>
+            <path d="M110 60 L110 140 M110 100 L130 60 M110 100 L130 140" 
+                  stroke="#e74c3c" 
+                  stroke-width="8" 
+                  stroke-linecap="round"
+                  fill="none"/>
+            <circle cx="60" cy="90" r="3" fill="#f39c12"/>
+            <circle cx="140" cy="110" r="3" fill="#f39c12"/>
+            <circle cx="100" cy="150" r="3" fill="#f39c12"/>
+        </svg>
+    </div>
+
     <!-- Scripts -->
-    <script src="app.js"></script>
+    <script defer src="app.js"></script>
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
