--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                     Specializing in modern web development with a keen focus on user-centric design and cybersecurity best practices.
                 </p>
                 <div class="btn-con">
-                    <a href="#" class="main-btn">
-                        <span class="btn-text">Download CV</span>
-                        <span class="btn-icon"><i class="fas fa-download"></i></span>
+                    <a href="https://drive.google.com/file/d/1qM5V8fWRoMNAvStG7CFda9w86rG2RtxX/view?usp=sharing" target="_blank" class="main-btn">
+                        <span class="btn-text">View CV</span>
+                        <span class="btn-icon"><i class="fas fa-eye"></i></span>
                     </a>
                 </div>
             </div>
@@ -87,7 +87,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="img/hero1.png" alt="Profile Image">   
+                        <img src="img/hero2.png" alt="Profile Image">   
                     </div>
                     <div class="about-col-2">
                         <div class="main-title">
@@ -283,9 +283,9 @@
                     <a href="#" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
                 </div>
                 
-                <a href="#" download class="main-btn">
-                    <span class="btn-text">Download CV</span>
-                    <span class="btn-icon"><i class="fas fa-download"></i></span>
+                <a href="https://drive.google.com/file/d/1qM5V8fWRoMNAvStG7CFda9w86rG2RtxX/view?usp=sharing" target="_blank" class="main-btn">
+                    <span class="btn-text">View CV</span>
+                    <span class="btn-icon"><i class="fas fa-eye"></i></span>
                 </a>
             </div>
             
