--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                         </div>
                         <div class="tab-contents" id="experience">
                             <ul>
-                                <li><span>2024 - Current</span><br>Team Member at Skill Forge Bw</li>
-                                <li><span>2023</span><br>Attache' at Botswana Unified Revenue Services</li>
+                                <li><span>2024 - Current</span><br>Co - Founder | Tetlanyo Innovations</li>
+                                <li><span>2023</span><br>Attache' | Botswana Unified Revenue Services</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="education">
