--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         </div>
                         <div class="tab-contents" id="education">
                             <ul>
-                                <li><span>2024</span><br>BSc (Hons) Computer Systems Engineering at Botswana Accountancy College</li>
+                                <li><span>2024</span><br>BSc (Hons) Computer Systems Engineering | Botswana Accountancy College</li>
                             </ul>
                         </div>
                     </div>
