--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                         <div class="tab-contents" id="experience">
                             <ul>
                                 <li><span>2024 - Current</span><br>Co - Founder | Tetlanyo Innovations</li>
+                                <li><span>2024</span><br>Team Member | Skill Forge BW</li>
                                 <li><span>2023</span><br>Attache' | Botswana Unified Revenue Services</li>
                             </ul>
                         </div>
