updates to services page

--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@
             <div class="service-item">
                 <i class="fas fa-code"></i>
                 <h2>Web Development</h2>
-                <p>Creating responsive and user-friendly websites using modern technologies and best practices. Specializing in Javascript, Tailwind CSS and React.</p>
+                <p>Creating responsive and user-friendly websites using modern technologies and best practices. Specializing in JavaScript and Tailwind CSS, currently learning React.</p>
                 <a href="#" class="service-link">Learn More <i class="fas fa-arrow-right"></i></a>
             </div>
             
             <div class="service-item">
                 <i class="fas fa-mobile-alt"></i>
                 <h2>App Development</h2>
-                <p>Building android mobile applications with focus on performance and user experience. Expert in kotlin.</p>
+                <p>Building android mobile applications with focus on performance and user experience. Proficient in Kotlin and Flutter..</p>
                 <a href="#" class="service-link">Learn More <i class="fas fa-arrow-right"></i></a>
             </div>
             
