--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     Specializing in modern web development with a keen focus on user-centric design and cybersecurity best practices.
                 </p>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/file/d/1qM5V8fWRoMNAvStG7CFda9w86rG2RtxX/view?usp=sharing" target="_blank" class="main-btn">
+                   <!-- <a href="https://drive.google.com/file/d/1qM5V8fWRoMNAvStG7CFda9w86rG2RtxX/view?usp=sharing" target="_blank" class="main-btn">-->
                         <span class="btn-text">View CV</span>
                         <span class="btn-icon"><i class="fas fa-eye"></i></span>
                     </a>
@@ -239,7 +239,7 @@
             <div class="service-item">
                 <i class="fas fa-mobile-alt"></i>
                 <h2>App Development</h2>
-                <p>Building android mobile applications with focus on performance and user experience. Proficient in Kotlin and Flutter..</p>
+                <p>Building Android mobile applications with a focus on performance and user experience. Proficient in Kotlin and Flutter..</p>
                 <a href="#" class="service-link">Learn More <i class="fas fa-arrow-right"></i></a>
             </div>
             
@@ -284,7 +284,7 @@
                     <a href="#" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
                 </div>
                 
-                <a href="https://drive.google.com/file/d/1qM5V8fWRoMNAvStG7CFda9w86rG2RtxX/view?usp=sharing" target="_blank" class="main-btn">
+                <!--<a href="https://drive.google.com/file/d/1qM5V8fWRoMNAvStG7CFda9w86rG2RtxX/view?usp=sharing" target="_blank" class="main-btn">-->
                     <span class="btn-text">View CV</span>
                     <span class="btn-icon"><i class="fas fa-eye"></i></span>
                 </a>
